<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_camera"
            android:title="@string/take_photo"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_folder_multiple_image"
            android:title="@string/gallery"/>
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/tools"/>
    </group>

    <item android:title="Social">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_variant"
                android:title="@string/share"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_send"
                android:title="@string/send"/>
        </menu>
    </item>

    <item android:title="">
        <menu>
        <item
        android:id="@+id/nav_logout"
        android:title="@string/logout"/>

        </menu>
    </item>

</menu>
